ajout de point d'exclamation

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -7,7 +7,7 @@
 	<%=link_to "Se déconnecter", users_logout_path%>
 	<%=link_to "Liste des utilisateurs", users_index_path%>
 <%else%>
-	<h1>Bienvenue visiteur anonyme !</h1>
+	<h1>Bienvenue visiteur anonyme !!!!</h1>
 	<%=link_to  "S'identifier",users_login_path%>	 
 <%end%>
 
