--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -8,7 +8,7 @@
 	<%=link_to "Liste des utilisateurs", users_index_path%>
 <%else%>
 	<h1>Bienvenue visiteur anonyme !!!!</h1>
-	<h1>are you mad what's wrong with you GET CONNECTED yoo</h1>
+	<h1>are you serious what's wrong with you GET CONNECTED yoo</h1>
 
 	<%=link_to  "S'identifier",users_login_path%>	 
 <%end%>
