registre and autoconnection

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -10,7 +10,8 @@
 	<h1>Bienvenue visiteur anonyme !!!!</h1>
 	<h1>ARE YOU SERIOUS what's wrong with you GET CONNECTED yoo</h1>
 
-	<%=link_to  "S'identifier",users_login_path%>	 
+	<%=link_to  "S'identifier",users_login_path%>
+	<%=link_to  "Créer un compte",users_registre_path%>	 
 <%end%>
 
 
