--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,9 @@
 <%if @users%>
 	<h3>Liste des utilisateurs</h3><br />
 	<%@users.each do |user|%>
-		<p><%=user.name%></p>	
+		<%=link_to users_show_path(user.id) do%>
+			<p><%=user.name%></p>
+		<%end%>	
 	<%end%>
 <%else%>
 	<%=flash[:error]%>
